# speq-skill

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  deny.toml  install.sh  uninstall.sh
.claude/: .gitignore  settings.json
.claude/agents/: code-reviewer.md  implementer-agent.md  implementer-expert-agent.md  planner-agent.md  recorder-agent.md
.claude/rules/: default-core.md  default-git.md  default-guardrails.md  mcp-context7.md  mcp-serena.md
.claude/skills/code-guardrails/: SKILL.md
.claude/skills/code-tools/: SKILL.md
.claude/skills/ext-research/: SKILL.md
.claude/skills/git-discipline/: SKILL.md
.claude/skills/mission-creator/: SKILL.md
.claude/skills/mission-creator/references/: mission-template.md
.claude/skills/planner/: SKILL.md
.claude/skills/recorder/: SKILL.md
.claude/skills/spec-implementer/: SKILL.md
.claude/skills/spec-implementer/references/: evidence-requirements.md  task-flow.md  tdd-cycle-checklist.md
.claude/skills/spec-planner/: SKILL.md
.claude/skills/spec-planner/references/: delta-template.md  plan-template.md
.claude/skills/spec-recorder/: SKILL.md
.claude/skills/speq-cli/: SKILL.md
.claude/skills/speq-code-guardrails/: SKILL.md
.claude/skills/speq-code-tools/: SKILL.md
.claude/skills/speq-ext-research/: SKILL.md
.claude/skills/speq-git-discipline/: SKILL.md
.claude/skills/speq-implement/: SKILL.md
.claude/skills/speq-implement/references/: task-flow.md  tdd-cycle-checklist.md  verification-template.md
.claude/skills/speq-implementer/: SKILL.md
.claude/skills/speq-implementer/references/: sub-agent-prompt.md  task-flow.md  verification-template.md
.claude/skills/speq-mission/: SKILL.md
.claude/skills/speq-mission-creator/: SKILL.md
.claude/skills/speq-plan/: SKILL.md
.claude/skills/speq-plan/references/: decision-log-permanent-template.md  (+3 more)
.claude/skills/speq-planner/: SKILL.md
.claude/skills/speq-record/: SKILL.md
.claude/skills/speq-recorder/: SKILL.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
docs/: cli-reference.md  codex.md  decision-log.md  index.md  installation.md  mcp-servers.md  model-routing.md  semantic-anchors.md  spec-library.md  workflow.md
schemas/: delta.md  feature.md  mission.md
scripts/: build-plugin.sh  install-codex-skills.sh  install.sh  local-install.sh  mcp.json  plugin.json  remote-install.sh  uninstall.sh
scripts/plugin/: build.sh  codex-marketplace.json  codex-plugin.json  marketplace.json  mcp-codex.json  mcp.json  plugin.json
scripts/release/: build.sh  test.sh
specs/: .gitignore  decision-log.md  mission.md
specs/_plans/add-decision-log-validation/: decision-log.md  plan.md  tasks.md  verification-report.md
specs/cli/decision-log-validate/: spec.md
specs/cli/domain-list/: spec.md
specs/cli/feature-search/: spec.md
specs/cli/plan-validate/: spec.md
specs/cli/record/: spec.md
specs/cli/version-flag/: spec.md
specs/core/spec-hierarchy/: spec.md
specs/installer/model-provisioning/: spec.md
specs/validation/document-structure/: spec.md
specs/validation/keyword-casing/: spec.md
specs/validation/rfc2119-keywords/: spec.md
specs/validation/scenario-structure/: spec.md
src/: cli.rs  embedding.rs  feature.rs  lib.rs  main.rs  plan.rs  record.rs  search.rs  tree.rs
src/validate/: decision_log.rs  mod.rs  parser.rs  report.rs  rules.rs
tests/: cli_integration.rs  cli_version.rs  decision_log_validate.rs  install_model_provisioning.rs  keyword_casing.rs  mcp_config.rs  plan_validate.rs
tests/docker/: Dockerfile  test-codex-plugin.sh  test-docker.sh  test-install.sh  test-uninstall.sh  test-update.sh
tests/fixtures/model-stub/: model.safetensors
(+52 files in other folders)
