[package]
name = "speq-skill"
version = "0.3.1"
edition = "2024"
authors = ["marconae"]
license = "MIT"
description = "Spec-driven development CLI for Claude Code"
repository = "https://github.com/marconae/speq-skill"
readme = "README.md"
keywords = ["spec", "tdd", "claude", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "speq"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
pulldown-cmark = "0.13"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
chrono = "0.4"
postcard = { version = "1.1", features = ["alloc"] }

# ort does not provide prebuilt binaries for x86_64-apple-darwin (Intel Mac).
# Use ort-load-dynamic there and link against a system-installed ONNX Runtime
# (e.g. `brew install onnxruntime`). All other platforms download binaries automatically.
[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
fastembed = { version = "5.8", default-features = false, features = [
    "hf-hub-rustls-tls",
    "ort-load-dynamic",
    "image-models",
] }

[target.'cfg(not(all(target_os = "macos", target_arch = "x86_64")))'.dependencies]
fastembed = { version = "5.8", default-features = false, features = [
    "hf-hub-rustls-tls",
    "ort-download-binaries",
    "image-models",
] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"
tempfile = "3"
